--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,13 +12,16 @@
 .dataflex{
   display: flex;
   flex-direction: column;
-  margin-left: 20%;
+  margin-left: 19%;
   height: 100vh;
   background-color: rgb(9,9,11);
   overflow-x:hidden
 }
 .feedbackCard{
   display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: start;
 }
 .App > h1 {
   font-family: "IBM Plex Sans", sans-serif;
