--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,7 +12,7 @@
 .dataflex{
   display: flex;
   flex-direction: column;
-  margin-left: 19%;
+  /* margin-left: 19%; */
   height: 100vh;
   background-color: rgb(9,9,11);
   overflow-x:hidden
