--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,23 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
-
-
-.App{
+.App {
   display: flex;
   justify-content: flex-start;
   background-color: #000000ee;
   height: 100vh;
 }
 
-.dataflex{
+.dataflex {
   display: flex;
   flex-direction: column;
   /* margin-left: 19%; */
   height: 100vh;
-  background-color: rgb(9,9,11);
-  overflow-x:hidden
+  background-color: rgb(9, 9, 11);
+  overflow-x: hidden;
 }
-.feedbackCard{
+.feedbackCard {
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
@@ -27,5 +25,5 @@
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 900;
   font-size: 2rem;
-  font-style: normal
+  font-style: normal;
 }
